# MLS-CNN

./: .gitignore  README.md  data.py  input_args.py  main.py  models.py  plot.py  pyproject.toml  requirements.txt  training.py  tuning.py
examples/: input_cnn_xlum_example.toml  input_number_counts_xlum_example.toml
inputs/: input_cnn_example.toml  input_galileo_cnn2_n32_m10_z1.toml  input_galileo_cnn2_n32_m5_z1.toml  input_galileo_cnn2_n32_m7_z1.toml  input_galileo_cnn_n16_xlum_1.3e-1_1e0_5_z_0_xlumBA4_sobol8.toml  input_galileo_cnn_n32_m10_z1.toml  input_galileo_cnn_n32_m1_z1.toml  input_galileo_cnn_n32_m3_z1.toml  input_galileo_cnn_n32_xlum_1.3e-1_1e0_5_z_0.toml  input_galileo_cnn_n32_xlum_1.3e-1_1e0_5_z_0_xlumBA4_sobol8.toml  input_galileo_cnn_n32_xlum_1.3e-1_1e0_5_z_0_xlum_sobol_4.toml  input_galileo_cnn_n32_xlum_1e-2_1e0_10_z_0.toml  input_galileo_cnn_n64_m1_z1.toml  input_galileo_nc.toml  input_galileo_nc_xlum.toml  input_galileo_nc_xlum_1.3e-1_1e0_5_z_0.toml  input_galileo_nc_xlum_1.3e-1_1e0_5_z_0_xlumBA4_sobol8.toml  input_galileo_ps.toml  input_galileo_ps_nc.toml  input_galileo_ps_nc_m10_z1.toml  input_galileo_ps_nc_m5_z1.toml  input_galileo_ps_nc_m7_z1.toml  input_galileo_ps_xlum.toml  input_indaco_cnn_n16_mass_1e14_1e15_10_z_0.25.toml  input_indaco_cnn_n16_xlum_1.3e-1_1e0_5_z_0_xlumBA4_sobol8.toml  input_indaco_cnn_n32_mass_1e14_1e15_10_z_0.25.toml  input_indaco_cnn_n32_mass_1e14_1e15_10_z_0.toml  input_indaco_cnn_n32_xlum_1.3e-1_1e0_5_z_0_xlumBA4_sobol8.toml  input_indaco_cnn_n32_xlum_1.3e-1_1e0_5_z_0_xlumBA4_sobol8_S8.toml  (+206 more)
scripts/: run_indaco.sh  (+19 more)
