[project]
name = "mls-cnn"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "abacusutils>=2.1.0",
    "matplotlib>=3.10.3",
    "optuna>=4.3.0",
    "pandas>=2.2.3",
    "pydantic>=2.11.4",
    "rich>=14.0.0",
    "scikit-learn>=1.6.1",
    "torch>=2.7.0",
    "torchinfo>=1.8.0",
    "torchvision>=0.22.0",
]
